--- a/static/app.css
+++ b/static/app.css
@@ -35,7 +35,10 @@
         margin-top: 0px;
         gap: 10px;
     }
-    
+    .grid-item {
+        max-width: 250px; /* Reduce max-width of containers */
+        height: 220px; /* Reduce height of containers */
+    }
 }
 
 @media (max-width: 768px) {
@@ -43,6 +46,9 @@
         grid-template-columns: repeat(2,1fr); /* 1 column for smaller devices */
         gap: 10px;
         margin-top: 0px;
+    .grid-item {
+        max-width: 220px; /* Further reduce max-width for smaller devices */
+        height: 200px; /* Further reduce height for smaller devices */
     }
 }
 
