--- a/static/app.css
+++ b/static/app.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
+body {
+    padding-top: 0px !important;
+    margin-top: 0px !important;
+}
 
+.main .block-container {
+    padding-top: 10px; /* Adjust this value as needed */
+}
+
+.grid-container {
+    margin-top: 0px; /* Set margin-top to 0 or adjust to your needs */
+}
 .custom-title {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
